@@ -1,9 +1,10 @@
 FROM ubuntu:18.04
 MAINTAINER Andy Wick <andy.wick@oath.com>
+ARG ARKIME_BRANCH=main
 
 RUN apt-get update && \
 apt-get install -y gnupg lsb-release ruby-dev make python3-pip git libtest-differences-perl sudo wget && \
-apt-key adv --refresh-keys --keyserver keyserver.ubuntu.com && \
+apt-key adv --refresh-keys --keyserver pgp.mit.edu && \
 apt-get clean && \
 (cd /tmp && wget https://packages.ntop.org/apt-stable/18.04/all/apt-ntop-stable.deb && dpkg -i apt-ntop-stable.deb) && \
 apt-get update && \
@@ -11,7 +12,7 @@ apt-get install -y pfring && \
 gem install --no-ri --no-rdoc fpm && \
 pip3 install awscli && \
 git clone https://github.com/arkime/arkime && \
-(cd arkime; git checkout main; ./easybutton-build.sh --daq --pfring --kafka) && \
+(cd arkime; git checkout $ARKIME_BRANCH; ./easybutton-build.sh --daq --pfring --kafka) && \
 mv arkime/thirdparty / && \
 rm -rf /thirdparty/glib*/*/tests /thirdparty/glib*/*/*/tests && \
 rm -rf arkime && \
