@@ -1,5 +1,6 @@
 FROM ubuntu:20.04
 MAINTAINER Andy Wick <andy.wick@oath.com>
+ARG ARKIME_BRANCH=main
 
 ENV DEBIAN_FRONTEND=noninteractive
 RUN apt-get update && \
@@ -10,7 +11,7 @@ apt-get install -y pfring && \
 gem install --no-document fpm && \
 pip3 install awscli && \
 git clone https://github.com/arkime/arkime && \
-(cd arkime; git checkout main; ./easybutton-build.sh --daq --pfring --kafka) && \
+(cd arkime; git checkout $ARKIME_BRANCH; ./easybutton-build.sh --daq --pfring --kafka) && \
 mv arkime/thirdparty / && \
 rm -rf /thirdparty/glib*/*/tests /thirdparty/glib*/*/*/tests && \
 rm -rf arkime && \
