@@ -1,5 +1,6 @@
 FROM ubuntu:22.04
 MAINTAINER Andy Wick <andy.wick@oath.com>
+ARG ARKIME_BRANCH=main
 
 ENV DEBIAN_FRONTEND=noninteractive
 RUN apt-get update && \
@@ -10,6 +11,6 @@ apt-get install -y pfring && \
 gem install --no-document fpm && \
 pip3 install awscli && \
 git clone https://github.com/arkime/arkime && \
-(cd arkime; git checkout main; ./easybutton-build.sh --nothirdparty --kafka) && \
+(cd arkime; git checkout $ARKIME_BRANCH; ./easybutton-build.sh --nothirdparty --kafka) && \
 rm -rf arkime && \
 rm -rf /var/lib/apt/lists/*
