@@ -1,30 +1,32 @@
 #!/bin/sh
-export VER=5.0.0-1
+export VER=5.0.0-3
+export ARKIME_BRANCH=main
+
 #docker images -a | grep "arkime-build" | awk '{print $3}' | xargs docker rmi
 
 echo "ARKIME DOCKER 7"
-docker image build build7 --no-cache=true --tag andywick/arkime-build-7:$VER
+docker image build build7 --no-cache=true --build-arg ARKIME_BRANCH=$ARKIME_BRANCH --tag andywick/arkime-build-7:$VER
 
 echo "ARKIME DOCKER 8"
-docker image build build8 --no-cache=true --tag andywick/arkime-build-8:$VER
+docker image build build8 --no-cache=true --build-arg ARKIME_BRANCH=$ARKIME_BRANCH --tag andywick/arkime-build-8:$VER
 
 echo "ARKIME DOCKER 9"
-docker image build build9 --no-cache=true --tag andywick/arkime-build-9:$VER
+docker image build build9 --no-cache=true --build-arg ARKIME_BRANCH=$ARKIME_BRANCH --tag andywick/arkime-build-9:$VER
 
 echo "ARKIME DOCKER 18"
-docker image build build18 --no-cache=true --tag andywick/arkime-build-18:$VER
+docker image build build18 --no-cache=true --build-arg ARKIME_BRANCH=$ARKIME_BRANCH --tag andywick/arkime-build-18:$VER
 
 echo "ARKIME DOCKER 20"
-docker image build build20 --no-cache=true --tag andywick/arkime-build-20:$VER
+docker image build build20 --no-cache=true --build-arg ARKIME_BRANCH=$ARKIME_BRANCH --tag andywick/arkime-build-20:$VER
 
 echo "ARKIME DOCKER 22"
-docker image build build22 --no-cache=true --tag andywick/arkime-build-22:$VER
+docker image build build22 --no-cache=true --build-arg ARKIME_BRANCH=$ARKIME_BRANCH --tag andywick/arkime-build-22:$VER
 
 echo "ARKIME DOCKER Arch"
-docker image build buildArch --no-cache=true --tag andywick/arkime-build-arch:$VER
+docker image build buildArch --no-cache=true --build-arg ARKIME_BRANCH=$ARKIME_BRANCH --tag andywick/arkime-build-arch:$VER
 
 echo "ARKIME DOCKER Al2023"
-docker image build buildAl2023 --no-cache=true --tag andywick/arkime-build-al2023:$VER
+docker image build buildAl2023 --no-cache=true --build-arg ARKIME_BRANCH=$ARKIME_BRANCH --tag andywick/arkime-build-al2023:$VER
 
 
 exit 0
